<resources>
    <string name="app_name">RoastingAssistant</string>
    <string name="tab_text_1">Roast</string>
    <string name="tab_text_2">Beans</string>
    <string name="tab_text_3">Blend</string>

    <string name="checkpoint_text">Checkpoint</string>
    <string name="title_activity_previous_roast">PreviousRoastActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_roast_data_view">RoastDataViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="stop_button_string">Stop</string>
    <string name="zoom_out_button_string">-</string>
    <string name="zoom_in_button_string">+</string>
    <string name="next_checkpoint_button_string">next checkpoint</string>
    <string name="time_text_string">Time:0.0</string>
    <string name="undo_checkpoint_button_string">undo checkpoint</string>
    <string name="start_button_string">Start</string>
    <string name="title_activity_camera_calibration">CameraCalibrationActivity</string>
    <string name="loading">Loading..</string>
    <string name="title_activity_roaster">RoasterActivity</string>
</resources>