<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".user_interface.RoastActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grayBack"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/roastactivity_camandgraph_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">


            <LinearLayout
                android:id="@+id/roastactivity_camera_Layout"
                android:layout_width="@dimen/roastactivity_camerapreview_width"
                android:layout_height="@dimen/roastactivity_camerapreview_height"
                android:orientation="horizontal"
                android:alpha="1"
                />

                <View
                    android:id="@+id/roastactivity_highlight_view"
                    android:layout_width="@dimen/roastactivity_hightlight_width"
                    android:layout_height="@dimen/roastactivity_hightlight_height"
                    android:layout_gravity="center"
                    android:background="@drawable/preview_box" >
                </View>
                <View
                    android:layout_width="22dp"
                    android:layout_height="@dimen/roastactivity_hightlight_height"
                    android:layout_gravity="center"
                    android:background="@drawable/preview_box" >
                </View>
                <Button
                    android:id="@+id/roastactivity_zoomin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zoom_in_button_string"
                    android:background="@drawable/round_shape_btn"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    />
                <Button
                    android:id="@+id/roastactivity_zoomout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zoom_out_button_string"
                    android:background="@drawable/round_shape_btn"
                    android:layout_gravity="bottom|end"

                    />


            </FrameLayout>

            <TextView
                android:id="@+id/roastactivity_temp_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Current Temp:"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/lightGray"
                android:background="@color/betweenBackAndButton"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <com.androidplot.xy.XYPlot
                style="@style/APDefacto.Dark"
                android:id="@+id/plot"
                android:layout_width="320dp"
                android:layout_height="220dp"
                android:layout_marginEnd="10dp"
                app:title="Roast Temperature"
                app:rangeTitle="Temperature"
                app:domainTitle="Time"
                app:lineLabels="left|bottom"
                app:lineLabelRotationBottom="-45"
                app:renderMode="use_background_thread"/>



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/lightGray"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/roastactivity_stop_button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/stop_button_string"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
                android:layout_weight="0"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/roastactivity_time_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_text_string"
                android:textColor="@color/lightGray"
                android:layout_gravity="center"/>
            <LinearLayout
                android:id="@+id/roastactivity_checkpoint_linearlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/roastactivity_checkpoint_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_checkpoint_button_string"
                    android:textColor="@color/lightGray"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/roastactivity_undocheckpoint_button"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:text="@string/undo_checkpoint_button_string"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
                android:layout_weight="0"
                />
            <Button
                android:id="@+id/roastactivity_checkpoint_button"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:text="@string/start_button_string"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
                android:layout_weight="0"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>