<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".user_interface.RoastActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grayBack"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/cameracalibrationactivity_camandgraph_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/cameracalibrationactivity_camera_Layout"
                    android:layout_width="@dimen/roastactivity_camerapreview_width"
                    android:layout_height="@dimen/roastactivity_camerapreview_height"
                    android:orientation="horizontal"
                    android:alpha="1"
                    android:layout_marginStart="10dp"/>

                <View
                    android:id="@+id/cameracalibrationactivity_highlight_view"
                    android:layout_width="@dimen/roastactivity_hightlight_width"
                    android:layout_height="@dimen/roastactivity_hightlight_height"
                    android:layout_gravity="center"
                    android:background="@drawable/preview_box" >
                </View>
                <View
                    android:layout_width="22dp"
                    android:layout_height="@dimen/roastactivity_hightlight_height"
                    android:layout_gravity="center"
                    android:background="@drawable/preview_box" >
                </View>
                <Button
                    android:id="@+id/cameracalibrationactivity_zoomin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zoom_in_button_string"
                    android:background="@drawable/round_shape_btn"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    />
                <Button
                    android:id="@+id/cameracalibrationactivity_zoomout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zoom_out_button_string"
                    android:background="@drawable/round_shape_btn"
                    android:layout_gravity="bottom|end"

                    />


            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/cameracalibrationactivity_leftimg_imageview"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <ImageView
                        android:id="@+id/cameracalibrationactivity_midimg_imageview"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                    <ImageView
                        android:id="@+id/cameracalibrationactivity_rightimg_imageview"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>
                </LinearLayout>
                <TextView
                android:id="@+id/cameracalibrationactivity_temp_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Loading..."
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/lightGray"
                android:background="@color/betweenBackAndButton"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/lightGray"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/cameracalibrationactivity_output1_button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
                android:layout_weight="0"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>


            <Button
                android:id="@+id/cameracalibrationactivity_output2_button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
                android:layout_weight="0"
                />
            <Button
                android:id="@+id/cameracalibrationactivity_output3_button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
                android:layout_weight="0"
                android:layout_marginLeft="10dp"/>
            <Button
                android:id="@+id/cameracalibrationactivity_output4_button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
                android:layout_weight="0"
                android:layout_marginLeft="10dp"/>
            <Button
                android:id="@+id/cameracalibrationactivity_output5_button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
                android:layout_weight="0"
                android:layout_marginLeft="10dp"/>
            <Button
                android:id="@+id/cameracalibrationactivity_output6_button"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:background="@drawable/round_shape_btn"
                android:layout_weight="0"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>